--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 env:
   DOCKER_IMAGE=matshareyourscript/aws-helm-kubectl
-  DOCKER_TAG=2.1.1
+  DOCKER_TAG=2.2.0
 
 services:
   - docker
 
 script:
   - docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
-  - docker tag $DOCKER_IMAGE:$DOCKER_TAG $DOCKER_IMAGE:latest
+  - docker tag $DOCKER_IMAGE:latest $DOCKER_IMAGE:$DOCKER_TAG
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
