--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 script:
-  - docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
+  - docker build -t $DOCKER_IMAGE:latest -t $DOCKER_IMAGE:$DOCKER_TAG .
   - docker tag $DOCKER_IMAGE:latest $DOCKER_IMAGE:$DOCKER_TAG
 
 after_success:
